# ai-agent-workflow-automation

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  SPEC.md  docker-compose.yml  publish.sh  push_to_github.sh  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  feature_request.md  feature_request.yml
.github/workflows/: ci.yml
data/: batch_tasks.json  sample_tasks.json  seed_customers.json  seed_orders.json
docs/: architecture.md  demo_script.md  failure_recovery.md  workflow_design.md
docs/screenshots/: README.md
examples/: README.md
src/workflow_agent/: cli.py
src/workflow_agent/agent/: intent_classifier.py  models.py  parser.py  planner.py  router.py
src/workflow_agent/api/: routes.py
src/workflow_agent/app/: main.py
src/workflow_agent/app/templates/: base.html  customers.html  index.html  orders.html  reports.html  supplier_onboarding.html
src/workflow_agent/browser/: playwright_client.py  screenshots.py  selectors.py
src/workflow_agent/executor/: errors.py  retry.py  workflow_executor.py
src/workflow_agent/logging/: artifact_store.py  audit_logger.py
src/workflow_agent/tools/: customer_tools.py  form_tools.py  order_tools.py  report_tools.py
tests/: conftest.py  test_e2e_playwright.py  test_executor.py  test_parser.py  test_planner.py  test_tools_customer.py  test_tools_order.py
