[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ai-agent-workflow-automation"
version = "0.1.0"
description = "An AI agent workflow demo for automating ERP-like web operations with Playwright, tool calling, execution logs, and failure recovery."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "jinja2>=3.1.0",
    "pydantic>=2.7.0",
    "typer>=0.12.0",
    "pytest>=8.2.0",
    "pytest-playwright>=0.5.0",
    "playwright>=1.44.0",
    "httpx>=0.27.0",
    "ruff>=0.4.0",
    "python-multipart>=0.0.9",
    "pytest-asyncio>=0.23.0",
]

[project.optional-dependencies]
dev = [
    "mypy>=1.10.0",
    "pytest-cov>=5.0.0",
]

[project.scripts]
workflow-agent = "workflow_agent.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/workflow_agent"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "N", "UP", "B", "C4", "SIM"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
